feat: Implement auto-creation of PocketBase superuser from environment variables
- Added specification for auto-creating superuser on container startup.
- Enhanced entrypoint script with input validation, health checks, and error handling.
- Fixed migration errors related to RelationField and index creation.
- Created handoff documents for each major change and bug fix.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,22 +1,121 @@
-# Server Configuration
+# =============================================================================
+# AI Journaling App - Environment Configuration
+# =============================================================================
+# Copy this file to .env and modify the values for your environment.
+# DO NOT commit .env to version control - it contains sensitive data!
+# =============================================================================
+
+# =============================================================================
+# POCKETBASE ADMIN CONFIGURATION (Auto-Created Superuser)
+# =============================================================================
+# These credentials will be used to automatically create a PocketBase superuser
+# on first container startup. You can login at http://localhost:8090/_/
+#
+# IMPORTANT: Change these in production! The superuser has full system access.
+# Password must be at least 8 characters.
+# =============================================================================
+
 PB_ADMIN_EMAIL=admin@aijournal.app
 PB_ADMIN_PASSWORD=admin123456
+
+# =============================================================================
+# SERVER CONFIGURATION
+# =============================================================================
+# PB_HTTP: Bind address for PocketBase server (default: 0.0.0.0:8090)
+# Format: <ip>:<port> or just :<port> for all interfaces
+# PB_PORT: Port number (should match the port in PB_HTTP)
+# =============================================================================
+
 PB_HTTP=0.0.0.0:8090
 PB_PORT=8090
 
-# Test User
+# =============================================================================
+# DATABASE & MIGRATIONS
+# =============================================================================
+# PB_AUTOMIGRATE: Automatically run database migrations on startup (true/false)
+# Set to 'false' in production if you want manual migration control
+# =============================================================================
+
+PB_AUTOMIGRATE=true
+
+# =============================================================================
+# TEST USER CONFIGURATION (Development Only)
+# =============================================================================
+# These credentials create a test user for development purposes.
+# The test user will have sample journal entries pre-populated.
+# Remove or comment out in production.
+# =============================================================================
+
 PB_TEST_USER_EMAIL=test@aijournal.app
 PB_TEST_USER_PASSWORD=test123456
 
-# Seeder Configuration
+# =============================================================================
+# SEEDER CONFIGURATION
+# =============================================================================
+# PB_RUN_SEEDERS: Run database seeders on startup (true/false)
+# Seeders create test data including sample journal entries.
+# Set to 'false' in production to avoid creating test data.
+# =============================================================================
+
 PB_RUN_SEEDERS=true
 
-# AI Queue Configuration
+# =============================================================================
+# AI QUEUE CONFIGURATION
+# =============================================================================
+# ENABLE_AI_QUEUE: Enable background AI processing queue (true/false)
+# QUEUE_PROCESS_INTERVAL: Seconds between queue processing attempts (default: 5)
+# =============================================================================
+
 ENABLE_AI_QUEUE=true
 QUEUE_PROCESS_INTERVAL=5
 
-# AI Studio Configuration
-AI_STUDIO_API_KEY=
+# =============================================================================
+# AI STUDIO CONFIGURATION (Google Gemini API)
+# =============================================================================
+# AI_STUDIO_API_KEY: Your Google AI Studio API key
+# Get yours at: https://aistudio.google.com/app/apikey
+#
+# AI_STUDIO_MODEL: Model to use for AI analysis
+# Options: gemma-3-27b-it (default), gemini-1.5-flash, gemini-1.5-pro
+#
+# AI_RATE_LIMIT_TOKENS: Maximum tokens per minute (default: 15000)
+# AI_RATE_LIMIT_WINDOW: Rate limit window in seconds (default: 60)
+#
+# NOTE: These are for the free tier. Adjust if you have different limits.
+# =============================================================================
+
+AI_STUDIO_API_KEY=your_api_key_here
 AI_STUDIO_MODEL=gemma-3-27b-it
 AI_RATE_LIMIT_TOKENS=15000
 AI_RATE_LIMIT_WINDOW=60
+
+# =============================================================================
+# LOGGING & DEBUG
+# =============================================================================
+# PB_LOG_LEVEL: Logging verbosity (debug, info, warn, error)
+# Recommended: 'info' for development, 'warn' for production
+# PB_CORS_ENABLED: Enable CORS headers (true/false)
+# PB_CORS_ORIGINS: Allowed CORS origins, comma-separated
+# =============================================================================
+
+PB_LOG_LEVEL=info
+PB_CORS_ENABLED=true
+PB_CORS_ORIGINS=*
+
+# =============================================================================
+# SECURITY (Production)
+# =============================================================================
+# ENCRYPTION_HASH_PEPPER: Additional salt for password hashing
+# Generate a random string: openssl rand -hex 32
+# WARNING: Changing this after deployment will invalidate existing passwords!
+# =============================================================================
+
+# ENCRYPTION_HASH_PEPPER=your_random_pepper_string_here
+
+# =============================================================================
+# DOCKER SPECIFIC (docker-compose.yml will use these)
+# =============================================================================
+# COMPOSE_PROJECT_NAME: Prefix for Docker containers, volumes, networks
+# =============================================================================
+
+COMPOSE_PROJECT_NAME=ai-journal
